# future-talent-Viz

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  future-ready-talent-agent-prompt.md  prompt-add-all-visualizations.md  prompt-fix-database-issues.md  prompt-improve-viz-and-rag.md  prompt-restructure-landing-and-doc-pages.md  pyproject.toml  requirements.txt
app/: __init__.py  analytics.py  config.py  db.py  embeddings.py  export_sql.py  fix_database.py  industry_data.py  ingest.py  main.py  ocr.py  rag.py  reindex_embeddings.py  retrieval.py  schema.sql
benchmark/: __init__.py  benchmark.py  metrics.py  models.json  questions.json
config/: settings.json
core/: __init__.py  application.py  config.py  factory.py  interfaces.py  llm.py  logging.py  models.py  router.py
database/: __init__.py  schema.sql  seed.py
docs/: docker.md
evaluation/: README.md  retrieval_questions.json  retrieval_report.json  retrieval_report.md  run_retrieval_eval.py
frontend/: app.js  index.html  report.css  report.html  report.js  styles.css
future-ready-talent-dataset/: human-capital-unicef.txt  stem-education-and-workforce.txt  thai-youth-neet-motivation.txt  thailand-labour-demand-and-future-skills.txt
mcp/: __init__.py  client.py  server.py  tools.py
rag/: __init__.py  chunker.py  embeddings.py  factory.py  indexer.py  loader.py  prompts.py  retriever.py  vector_store.py
scripts/: run-local.sh  setup-local.sh
tests/: test_core.py  test_rag_architecture.py
web/: __init__.py  backend.py
