[project]
name = "future-ready-talent"
version = "0.1.0"
description = "Traceable Future Ready Talent knowledge platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.10,<3",
  "fastembed>=0.8,<0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.28,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
